--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
         ports: 
             - "8001:80"
         volumes:
-            - .:/var/www/html/
+            - ./:/var/www/html/
         links:
             - db
         networks:
             - default
     db:
-        image: mysql
+        image: mysql:5.7.13
         ports: 
             - "3306:3306"
         environment:
